--- a/Interfaccia_Docente.html
+++ b/Interfaccia_Docente.html
@@ -17,6 +17,10 @@
             <a href="log-eventi.html" class="list-group-item list-group-item-action">Amministrazione Log Eventi</a>
         </div>
     </div>
-    
+    <!--
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    -->
 </body>
 </html>
