--- a/Interfaccia_Docente.html
+++ b/Interfaccia_Docente.html
@@ -12,9 +12,10 @@
     <div class="container mt-5">
         <h1>Dashboard Docente</h1>
         <div class="list-group">
-            <a href="crea-tabella.html" class="list-group-item list-group-item-action">Crea Tabelle di Esercizio</a>
+            <a href="crea-tabella.php" class="list-group-item list-group-item-action">Crea Tabelle di Esercizio</a>
             <a href="gestione-test.php" class="list-group-item list-group-item-action">Gestione dei Test</a>
-            <a href="invia-messaggio.php" class="list-group-item list-group-item-action">Invia messaggi agi studenti</a>
+            <a href="invia-messaggio.php" class="list-group-item list-group-item-action">Invia messaggi agli
+                studenti</a>
             <a href="statistiche.html" class="list-group-item list-group-item-action">Visualizzazione Statistiche</a>
             <a href="log-eventi.html" class="list-group-item list-group-item-action">Amministrazione Log Eventi</a>
         </div>
