Sviluppo interfaccia e comandi docente

--- a/Interfaccia_Docente.html
+++ b/Interfaccia_Docente.html
@@ -13,7 +13,7 @@
         <h1>Dashboard Docente</h1>
         <div class="list-group">
             <a href="crea-tabelle.html" class="list-group-item list-group-item-action">Crea Tabella di Esercizio</a>
-            <a href="visualizza-test.html" class="list-group-item list-group-item-action">Visualizza test</a>
+            <a href="visualizza-test.php" class="list-group-item list-group-item-action">Visualizza test</a>
             <a href="creazione-test.php" class="list-group-item list-group-item-action">Crea nuovo Test</a>
             <a href="creazione-quesito.php" class="list-group-item list-group-item-action">Crea nuovo quesito</a>
             <a href="invia-messaggio.php" class="list-group-item list-group-item-action">Invia messaggio</a>
