--- a/interfaccia.html
+++ b/interfaccia.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<form action='login.php' method="post"
+<form action='registrazione/login.php' method="post"
  
 <br>
  <br>
